Fixed Register / Login text overlap in IE 9

--- a/drupal/profiles/takepart/themes/takepart3/css/style.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/style.css
@@ -35,6 +35,11 @@ body
     padding:0;
 }
 
+#join-login-top a.user-menu-register {
+    display: inline-block;
+    white-space:nowrap;
+}
+
 ul.dots li
 {
   cursor:pointer;
